# discord-custom-info

./: CMakeLists.txt  ComandExec.cppm  DiscordManager.cppm  HyprWin.cppm  README.md  main.cpp
